--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Mystic sunset, neon pink aura gallery",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#FF77FF",
-  "theme_color": "#FFD700",
+  "background_color": "#00dfff",
+  "theme_color": "#FFFFFF",
   "orientation": "portrait",
   "icons": [
     {
